add_languages('objc')

libui_src += ['darwin/alloc.m',
              'darwin/area.m',
              'darwin/areaevents.m',
              'darwin/autolayout.m',
              'darwin/box.m',
              'darwin/button.m',
              'darwin/checkbox.m',
              'darwin/colorbutton.m',
              'darwin/combobox.m',
              'darwin/control.m',
              'darwin/datetimepicker.m',
              'darwin/debug.m',
              'darwin/draw.m',
              'darwin/drawtext.m',
              'darwin/editablecombo.m',
              'darwin/entry.m',
              'darwin/fontbutton.m',
              'darwin/form.m',
              'darwin/grid.m',
              'darwin/group.m',
              'darwin/image.m',
              'darwin/label.m',
              'darwin/main.m',
              'darwin/map.m',
              'darwin/menu.m',
              'darwin/multilineentry.m',
              'darwin/progressbar.m',
              'darwin/radiobuttons.m',
              'darwin/scrollview.m',
              'darwin/separator.m',
              'darwin/slider.m',
              'darwin/spinbox.m',
              'darwin/stddialogs.m',
              'darwin/tab.m',
              'darwin/text.m',
              'darwin/util.m',
              'darwin/window.m',
              'darwin/winmoveresize.m']
libui_inc += include_directories('.')

frameworks = dependency('appleframeworks', modules: ['Foundation', 'AppKit'])
libui_deps += [frameworks]
