resources = []

if (host_machine.system() == 'windows')
  resources += ['resources.rc']
endif

test_src = ['drawtests.c',
            'main.c',
            'menus.c',
            'page1.c',
            'page2.c',
            'page3.c',
            'page4.c',
            'page5.c',
            'page6.c',
            'page7.c',
            'page7a.c',
            'page7b.c',
            'page7c.c',
            'page8.c',
            'page9.c',
            'page10.c',
            'page11.c',
            'page12.c',
            'page13.c',
            'page14.c',
            'page15.c',
            'spaced.c']
test_inc = include_directories('.')

tester = executable('tester', test_src + resources,
                    include_directories: test_inc,
                    dependencies: libui_dep,
                    gui_app: false,
                    install: false)
