libui_src += ['unix/alloc.c',
              'unix/area.c',
              'unix/box.c',
              'unix/button.c',
              'unix/cellrendererbutton.c',
              'unix/checkbox.c',
              'unix/child.c',
              'unix/colorbutton.c',
              'unix/combobox.c',
              'unix/control.c',
              'unix/datetimepicker.c',
              'unix/debug.c',
              'unix/draw.c',
              'unix/drawmatrix.c',
              'unix/drawpath.c',
              'unix/drawtext.c',
              'unix/editablecombo.c',
              'unix/entry.c',
              'unix/fontbutton.c',
              'unix/form.c',
              'unix/future.c',
              'unix/graphemes.c',
              'unix/grid.c',
              'unix/group.c',
              'unix/image.c',
              'unix/label.c',
              'unix/main.c',
              'unix/menu.c',
              'unix/multilineentry.c',
              'unix/progressbar.c',
              'unix/radiobuttons.c',
              'unix/separator.c',
              'unix/slider.c',
              'unix/spinbox.c',
              'unix/stddialogs.c',
              'unix/tab.c',
              'unix/text.c',
              'unix/util.c',
              'unix/window.c']
libui_inc += include_directories('.')

gtk3 = dependency('gtk+-3.0', required: true)
math = meson.get_compiler('c').find_library('m', required: false)
dl = meson.get_compiler('c').find_library('dl', required : false)
libui_deps += [gtk3, math, dl]
